Firt normal try

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,9 @@ distro==1.9.0
 executing==2.0.1
 frozendict==2.4.2
 idna==3.7
-# ipykernel==6.29.4  # Already in Colab, optional to keep
-# ipython==8.24.0    # Already in Colab, optional to keep
 jedi==0.19.1
 jsonpatch==1.33
 jsonpointer==2.1
-# jupyter_client==8.6.1  # Already in Colab, optional to keep
-# jupyter_core==5.7.2    # Already in Colab, optional to keep
-matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 packaging==23.2
 parso==0.8.4
@@ -34,16 +29,12 @@ pycosat==0.6.6
 pycparser==2.21
 Pygments==2.18.0
 PySocks==1.7.1
-pyzmq==26.0.3
 requests==2.32.2
 ruamel.yaml==0.17.21
 stack-data==0.6.3
 tqdm==4.66.4
-# tornado==6.4         # Already in Colab, optional to keep
 traitlets==5.14.3
 truststore==0.8.0
 urllib3==2.2.2
-wcwidth==0.2.13
 zstandard==0.22.0
-pykan
-tqdm
+pykan  # Assuming this is your custom module
